# hermodr

./: .dockerignore  .gitignore  .travis.yml  Dockerfile  LICENSE  Makefile  README.md  cabal.config  hermodr.cabal  readme.md
app/: Main.hs
release/: Dockerfile
