name:                hermodr
version:             0.0.0.1
synopsis:            Toy project: Prometheus exporter for MongoDB
description:         Please see readme.md
homepage:            https://github.com/githubuser/simple#readme
license:             MIT
license-file:        LICENSE
author:              Björn Lichtblau
maintainer:          lightblu@github
copyright:           2016 Björn Lichtblau
category:            Metrics
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

-- library
--   hs-source-dirs:      src
--   exposed-modules:     Lib
--   build-depends:       base >= 4.7 && < 5
--   default-language:    Haskell2010

executable hermodr
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -O2 -split-objs
  build-depends:       base, transformers, mongoDB, mtl
                     , bson, bytestring, text, warp, wai, http-types
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/simple
